--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DigiKipp – 7 Bilder Demo (mit Kippspeed)</title>
+  <title>DigiKipp – 7 Bilder Demo</title>
 
   <style>
     :root{
@@ -36,8 +36,8 @@
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
 
-      --ui-panel-bg: #4b2e22;
-      --ui-panel-border: rgba(0,0,0,0.35);
+      /* ===== UI (Variante A: Rostton) ===== */
+      --ui-panel-bg: #7a3f2b; /* Rost-Orange-Rot Variante A */
       --ui-text: #ead7be;
 
       --rotSign: 1;
@@ -206,7 +206,7 @@
       transform-origin: 0 0;
     }
 
-    /* ✅ KNALLHART (kein opacity) -> kein Blinken möglich */
+    /* KNALLHART -> kein Blinken */
     .hidden{ display:none !important; }
 
     .cubeShadow{
@@ -391,46 +391,37 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* ===== Kippspeed-Block (zwischen Box und Panel) ===== */
-    .speedBlock{
+    /* ===== Kippspeed Block (zwischen Box und Panel) ===== */
+    .kippspeedBlock{
       width: 100%;
-      box-sizing: border-box;
-      padding: 12px 12px 12px;
-      border-radius: 16px;
-      background: var(--ui-panel-bg);
-      box-shadow:
-        inset 0 0 0 4px #000,            /* ✅ 4px schwarzer Innenrahmen */
-        0 12px 22px rgba(0,0,0,0.22),
-        0 0 0 1px rgba(255,255,255,0.10) inset;
       display:flex;
       flex-direction: column;
-      gap: 10px;
-    }
-
-    .speedTitle{
-      font-weight: 900;
-      letter-spacing: 0.04em;
-      color: var(--ui-text);
+      gap: 6px;
       user-select:none;
-      text-shadow: 0 1px 0 rgba(0,0,0,0.25);
-      font-size: 22px;
-      line-height: 1.05;
-      text-align: left;
     }
 
-    .speedRow{
+    .kippspeedLabel{
+      font-weight: 1000;
+      letter-spacing: 0.10em;
+      text-transform: uppercase;
+      color: rgba(0,0,0,0.88);
+      text-shadow: 0 1px 0 rgba(255,255,255,0.22);
+      font-size: 16px;
+      line-height: 1.05;
+    }
+
+    .sliderRow{
       display:flex;
       align-items:center;
       gap: 14px;
-      user-select:none;
     }
 
     .speedIcon{
-      width: 40px;   /* ✅ groß (fast Slot-Zahl) */
-      height: 40px;
-      flex: 0 0 auto;
+      width: clamp(32px, 8vmin, 44px);
+      height: clamp(32px, 8vmin, 44px);
       opacity: 0.95;
-      filter: drop-shadow(0 1px 0 rgba(0,0,0,0.25));
+      flex: 0 0 auto;
+      filter: drop-shadow(0 1px 0 rgba(255,255,255,0.18)) drop-shadow(0 2px 4px rgba(0,0,0,0.22));
     }
 
     input[type="range"]{
@@ -466,18 +457,21 @@
       cursor: pointer;
     }
 
-    /* UI */
+    /* UI Panel */
     .uiPanel{
       width: 100%;
       box-sizing: border-box;
       padding: 12px 12px 10px;
       border-radius: 16px;
-      border: 1px solid var(--ui-panel-border);
+
       background: var(--ui-panel-bg);
+
+      /* schwarzer Innenrahmen 4px */
       box-shadow:
         inset 0 0 0 4px #000,
         0 12px 22px rgba(0,0,0,0.22),
         0 0 0 1px rgba(255,255,255,0.10) inset;
+
       display:flex;
       flex-direction: column;
       gap: 10px;
@@ -647,13 +641,13 @@
       <div class="ball" aria-label="Kugel"></div>
     </div>
 
-    <!-- ===== Kippspeed zwischen Box und Panel ===== -->
-    <div class="speedBlock" aria-label="Kippspeed Block">
-      <div class="speedTitle">Kippspeed</div>
-      <div class="speedRow">
-        <img class="speedIcon" src="kippspeed_snail.png" alt="langsam" />
-        <input id="speedSlider" type="range" min="0" max="9" value="3" aria-label="Kippspeed Slider" />
-        <img class="speedIcon" src="kippspeed_hase.png" alt="schnell" />
+    <!-- Kippspeed zwischen Box und Panel -->
+    <div class="kippspeedBlock" aria-label="Kippspeed">
+      <div class="kippspeedLabel">KIPPSPEED</div>
+      <div class="sliderRow">
+        <img class="speedIcon" src="kippspeed_snail.png" alt="langsam">
+        <input id="speedSlider" type="range" min="0" max="9" value="3" aria-label="Speed Slider">
+        <img class="speedIcon" src="kippspeed_hase.png" alt="schnell">
       </div>
     </div>
 
@@ -679,11 +673,11 @@
   </div>
 
   <script>
-    const boardEl  = document.getElementById("board");
-    const grid     = document.getElementById("grid");
-    const wFace    = document.getElementById("wFaceGroup");
-    const kipGroup = document.getElementById("kipGroup");
-    const btnStart = document.getElementById("btnStart");
+    const boardEl   = document.getElementById("board");
+    const grid      = document.getElementById("grid");
+    const wFace     = document.getElementById("wFaceGroup");
+    const kipGroup  = document.getElementById("kipGroup");
+    const btnStart  = document.getElementById("btnStart");
     const speedSlider = document.getElementById("speedSlider");
 
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
@@ -691,6 +685,19 @@
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
       boardEl.style.height = w + "px";
+    }
+
+    /* Speed -> echte Dauersteuerung (Top-Speed deutlich schneller) */
+    function getTiming(){
+      const v = Number(speedSlider.value || 3); // 0..9
+
+      // volle Phase (W): langsam ~3200ms ... schnell ~800ms
+      const holdMsFull = Math.max(800, Math.round(3200 - v * 266));
+
+      // KIP Phase: langsam ~2200ms ... schnell ~520ms
+      const holdMsKip  = Math.max(520, Math.round(2200 - v * 186));
+
+      return { holdMsFull, holdMsKip };
     }
 
     const cols = ["A","B","C","D","E","F","G","H"];
@@ -796,18 +803,7 @@
       return pool.slice(0, count);
     }
 
-    // ===== Kippspeed Timing =====
-    // Basis war 3000ms. Schnellste Stufe soll 2× so schnell sein => 1500ms.
-    // Langsamste Stufe etwas gemütlicher.
-    function getStepMs(){
-      const v = Number(speedSlider.value || 3); // 0..9
-      const t = v / 9;
-      const slow = 4200;  // langsam
-      const fast = 1500;  // ✅ 2× so schnell wie 3000
-      return Math.round(slow + (fast - slow) * t);
-    }
-
-    // ====== GOLDENE LOGIK ======
+    // ===== GOLDENE LOGIK =====
     let planned = [
       [null,null,null,null],
       [null,null,null,null],
@@ -862,7 +858,6 @@
       kipGroup.style.setProperty("--rot", deg + "deg");
     }
 
-    // ✅ Nur W rendern (wenn W sichtbar ist)
     function renderW(animate=false){
       setRotationSnap();
       const curr = sets[faceIndex];
@@ -873,21 +868,28 @@
       }
     }
 
-    // ✅ Nur KIP rendern (wenn KIP sichtbar ist)
+    function renderWEmpty(){
+      setRotationSnap();
+      for(let i=0;i<4;i++){
+        renderNumber(slotTargetsW[i], null, false);
+        slotTargetsW[i].classList.remove("dot");
+      }
+    }
+
     function renderKip(){
       setRotationSnap();
       const curr = sets[faceIndex];
       const nextFaceIndex = (faceIndex + 1) % 3;
       const next = sets[nextFaceIndex];
 
-      // rechts: aktuelle (die “wegkippt”)
+      // rechts: aktuelle (die wegkippt)
       for(let i=0;i<4;i++){
         renderNumber(slotTargetsKipRight[i], curr[i], false);
         if(curr[i] != null) setDot(slotTargetsKipRight[i], curr[i]);
         else slotTargetsKipRight[i].classList.remove("dot");
       }
 
-      // links: nächste (die “auftaucht”)
+      // links: nächste (taucht auf) -> ggf. leer, bis sie bestückt wird
       const nextPreview = mapHiddenToVisible_CW(next);
       for(let i=0;i<4;i++){
         renderNumber(slotTargetsKipLeft[i], nextPreview[i], false);
@@ -926,13 +928,13 @@
       setRotationSnap();
     }
 
-    function advanceFullCW_andAssign(){
+    // nur Indizes weiterdrehen (ohne Assign!)
+    function advanceFullCW(){
       rotIndex  = (rotIndex + 1) % 4;
       faceIndex = (faceIndex + 1) % 3;
-      ensureAssigned(faceIndex);
     }
 
-    // ====== DIE SHOW: 7 Bilder (Timing über Kippspeed) ======
+    // ===== SHOW: 7 Bilder, W-Flächen halb leer / halb bestückt =====
     let running = false;
 
     async function runShow7(){
@@ -940,67 +942,62 @@
       running = true;
       btnStart.disabled = true;
 
+      const { holdMsFull, holdMsKip } = getTiming();
+      const halfFull = Math.round(holdMsFull / 2);
+
       reroll12_keepEmpty();
 
-      // Pro Stufe: Hälfte leer, Hälfte mit Zahlen
-      const STEP_MS = getStepMs();
-      const HALF = Math.round(STEP_MS / 2);
-
-      // 1) W1 leer (HALF)
+      // 1) W1 leer (halbe Zeit)
       showW();
-      renderW(false);
-      await sleep(HALF);
+      renderWEmpty();
+      await sleep(halfFull);
 
-      // 2) W1 bestückt (HALF)
+      // 2) W1 bestückt (halbe Zeit)
       ensureAssigned(0);
       renderW(true);
-      await sleep(HALF);
+      await sleep(halfFull);
 
-      // 3) KIP W1->W2 (volle STEP_MS)
+      // 3) KIP W1 -> W2 (W2 bleibt leer!)
+      showKip();
+      renderKip();
+      await sleep(holdMsKip);
+
+      // 4) W2 leer (halbe Zeit)
+      advanceFullCW(); // jetzt faceIndex=1
+      showW();
+      renderWEmpty();
+      await sleep(halfFull);
+
+      // 5) W2 bestückt (halbe Zeit)
       ensureAssigned(1);
+      renderW(true);
+      await sleep(halfFull);
+
+      // 6) KIP W2 -> W3 (W3 bleibt leer!)
       showKip();
       renderKip();
-      await sleep(STEP_MS);
+      await sleep(holdMsKip);
 
-      // 4) W2: leer HALF, dann bestückt HALF
-      advanceFullCW_andAssign(); // faceIndex=1
+      // 7) W3 leer (halbe Zeit)
+      advanceFullCW(); // faceIndex=2
       showW();
-      // leer:
-      sets[faceIndex] = [null,null,null,null];
-      assigned[faceIndex] = true;
-      renderW(false);
-      await sleep(HALF);
-      // bestückt:
-      sets[faceIndex] = planned[faceIndex].slice();
-      renderW(true);
-      await sleep(HALF);
+      renderWEmpty();
+      await sleep(halfFull);
 
-      // 5) KIP W2->W3
+      // 8) W3 bestückt (halbe Zeit)
       ensureAssigned(2);
+      renderW(true);
+      await sleep(halfFull);
+
+      // 9) KIP W3 -> W1 (W1 ist schon bestückt, darf links sichtbar sein)
       showKip();
       renderKip();
-      await sleep(STEP_MS);
+      await sleep(holdMsKip);
 
-      // 6) W3: leer HALF, dann bestückt HALF
-      advanceFullCW_andAssign(); // faceIndex=2
+      // Ende: W1 wieder oben (bestückt)
+      advanceFullCW(); // faceIndex=0
       showW();
-      sets[faceIndex] = [null,null,null,null];
-      assigned[faceIndex] = true;
       renderW(false);
-      await sleep(HALF);
-      sets[faceIndex] = planned[faceIndex].slice();
-      renderW(true);
-      await sleep(HALF);
-
-      // 7) KIP W3->W1 (W1 existiert schon)
-      showKip();
-      renderKip();
-      await sleep(STEP_MS);
-
-      // Ende: W1 wieder oben (mit Zahlen)
-      advanceFullCW_andAssign(); // faceIndex=0
-      showW();
-      renderW(true);
 
       btnStart.textContent = "ZAHLEN NEU SETZEN";
       btnStart.disabled = false;
@@ -1018,7 +1015,7 @@
 
       reroll12_keepEmpty();
       showW();
-      renderW(false);
+      renderWEmpty();
     });
 
     window.addEventListener("resize", () => {
