--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
       --slot-border-w: 2px;
       --slot-fill: #ead7be;
 
-      --board-border: 4px;
-      --board-border-color: #000;
-      --board-radius: clamp(14px, 2.2vmin, 22px);
+      /* ===== Einheitliches Box-Schwarz ===== */
+      --box-black: #000;          /* EIN Schwarz für alles */
+      --box-border: 4px;          /* Umrahmung */
+      --box-radius: 0px;          /* KEIN Radius */
 
       --btn-bg: #ead7be;
       --btn-text: #2a160c;
@@ -40,10 +41,7 @@
       --ui-panel-bg: #7a3f2b; /* Rost-Orange-Rot Variante A */
       --ui-text: #ead7be;
 
-      /* Kippspeed-Streifen (schwarz) */
-      --kippstrip-bg: #000;
-
-      /* Dynamisch per JS: 3 Rasterzeilen hoch */
+      /* Kippspeed-Streifen Höhe: dynamisch = 3 Rasterzeilen */
       --kippstrip-h: auto;
 
       --rotSign: 1;
@@ -108,23 +106,41 @@
         0 10px 18px rgba(0,0,0,0.25);
     }
 
+    /* ===== NEU: gemeinsame BoxShell (Board + Sliderpanel) ===== */
+    .boxShell{
+      width: 100%;
+      box-sizing: border-box;
+
+      background: var(--box-black);
+      border: var(--box-border) solid var(--box-black);
+      border-radius: var(--box-radius);
+
+      /* gleiche Schattenwirkung wie vorher am Board */
+      box-shadow:
+        10px 18px 42px rgba(0,0,0,0.55),
+        3px 6px 16px rgba(0,0,0,0.35);
+
+      overflow: hidden; /* damit nix “übersteht” */
+      display:flex;
+      flex-direction: column;
+      gap: 0; /* WICHTIG: kein Zwischenraum */
+    }
+
+    /* ===== Board innen (ohne eigenen Border/Radius) ===== */
     .board{
       position:relative;
       width: 100%;
       height: 0;
       aspect-ratio: 1 / 1;
       box-sizing: border-box;
-      background: #0b0b0b;
-      border: var(--board-border) solid var(--board-border-color);
-      border-radius: var(--board-radius);
+
+      background: var(--box-black);
+      border: 0;
+      border-radius: 0;
       overflow: visible;
 
       --cell: calc((100% - 7 * var(--cell-gap)) / 8);
       --step: calc(var(--cell) + var(--cell-gap));
-
-      box-shadow:
-        10px 18px 42px rgba(0,0,0,0.55),
-        3px 6px 16px rgba(0,0,0,0.35);
     }
 
     .grid{
@@ -138,11 +154,14 @@
       z-index: 1;
     }
 
+    /* ===== Einheitliches Schwarz in den Zellen ===== */
     .cell{
-      background:#0b0b0b;
+      background: var(--box-black);
       border-radius: var(--cell-radius);
       box-sizing: border-box;
-      box-shadow: 0 0 0 1px rgba(255,255,255,0.02) inset;
+
+      /* weg mit dem “grauen” Inset, damit alles wirklich 1:1 schwarz ist */
+      box-shadow: none;
     }
 
     .c-orange{ background: var(--orange); }
@@ -194,7 +213,6 @@
       pointer-events: none;
     }
 
-    /* Gruppen: Rotation ist SNAP, aber ohne Transition */
     .wFaceGroup,
     .kipGroup{
       position:absolute;
@@ -212,7 +230,6 @@
       transform-origin: 0 0;
     }
 
-    /* KNALLHART -> kein Blinken */
     .hidden{ display:none !important; }
 
     .cubeShadow{
@@ -397,12 +414,11 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* ===== Kippspeed Block (schwarzer Streifen, 3 Rasterzeilen hoch) ===== */
+    /* ===== Kippspeed Panel (Teil der BoxShell) ===== */
     .kippspeedBlock{
       width: 100%;
       height: var(--kippstrip-h);
-      background: var(--kippstrip-bg);
-      border-radius: 0;
+      background: var(--box-black); /* exakt gleiches Schwarz */
       user-select:none;
 
       display:flex;
@@ -410,21 +426,19 @@
       justify-content: center;
       gap: 6px;
 
-      /* damit es wie ein sauberer Block wirkt */
-      box-shadow:
-        0 10px 18px rgba(0,0,0,0.22) inset,
-        0 -10px 18px rgba(0,0,0,0.18) inset;
+      /* kein extra “Panel-Look” mehr – es ist Box-Bauteil */
+      box-shadow: none;
     }
 
     .kippspeedLabel{
       font-weight: 1000;
       letter-spacing: 0.10em;
       text-transform: uppercase;
-      color: var(--ui-text);        /* hellbeige */
+      color: var(--ui-text);
       text-shadow: 0 1px 0 rgba(0,0,0,0.35);
       font-size: 16px;
       line-height: 1.05;
-      text-align: center;           /* zentriert */
+      text-align: center;
     }
 
     .sliderRow{
@@ -434,14 +448,12 @@
       padding: 0 12px;
     }
 
-    /* Icons hellbeige einfärben */
     .speedIcon{
       width: clamp(44px, 10vmin, 62px);
       height: clamp(44px, 10vmin, 62px);
       opacity: 0.98;
       flex: 0 0 auto;
 
-      /* macht schwarze Linien hellbeige (UI-Text) */
       filter:
         brightness(0) saturate(100%)
         invert(90%) sepia(16%) saturate(330%)
@@ -450,7 +462,6 @@
         drop-shadow(0 2px 6px rgba(0,0,0,0.25));
     }
 
-    /* Track rostbraun, Thumb bleibt */
     input[type="range"]{
       -webkit-appearance: none;
       appearance: none;
@@ -470,7 +481,7 @@
       width: 22px;
       height: 22px;
       border-radius: 6px;
-      background: var(--btn-bg);    /* bleibt */
+      background: var(--btn-bg);
       border: 2px solid rgba(0,0,0,0.35);
       box-shadow:
         0 8px 14px rgba(0,0,0,0.22),
@@ -481,12 +492,12 @@
       width: 22px;
       height: 22px;
       border-radius: 6px;
-      background: var(--btn-bg);    /* bleibt */
+      background: var(--btn-bg);
       border: 2px solid rgba(0,0,0,0.35);
       cursor: pointer;
     }
 
-    /* UI Panel */
+    /* UI Panel bleibt wie gehabt */
     .uiPanel{
       width: 100%;
       box-sizing: border-box;
@@ -495,7 +506,6 @@
 
       background: var(--ui-panel-bg);
 
-      /* schwarzer Innenrahmen 4px */
       box-shadow:
         inset 0 0 0 4px #000,
         0 12px 22px rgba(0,0,0,0.22),
@@ -633,50 +643,53 @@
       <h1>DigiKipp</h1>
     </div>
 
-    <div class="board" id="board">
-      <div class="floor" aria-hidden="true"></div>
-      <div id="grid" class="grid" aria-label="8×8 Raster"></div>
+    <!-- ===== NEU: Board + Sliderpanel als EIN Bauteil (BoxShell) ===== -->
+    <div class="boxShell" id="boxShell" aria-label="BoxShell">
+      <div class="board" id="board">
+        <div class="floor" aria-hidden="true"></div>
+        <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <div id="wFaceGroup" class="wFaceGroup" aria-label="W Paket">
-        <div class="cubeShadow" aria-hidden="true"></div>
-        <div class="cubeFace" aria-label="Würfelfläche"></div>
+        <div id="wFaceGroup" class="wFaceGroup" aria-label="W Paket">
+          <div class="cubeShadow" aria-hidden="true"></div>
+          <div class="cubeFace" aria-label="Würfelfläche"></div>
 
-        <div class="slot s-3b read-west"  data-slot="S1"><div class="num"><span></span></div></div>
-        <div class="slot s-4b read-west"  data-slot="S2"><div class="num"><span></span></div></div>
-        <div class="slot s-2c read-north" data-slot="S3"><div class="num"><span></span></div></div>
-        <div class="slot s-2d read-north" data-slot="S4"><div class="num"><span></span></div></div>
-      </div>
-
-      <div id="kipGroup" class="kipGroup hidden" aria-label="KIP Gruppe">
-        <div class="kipScale">
-          <div class="kipShadow" aria-hidden="true"></div>
-          <div class="kipEdgeCore" aria-hidden="true"></div>
-
-          <div class="cubeFace kipFaceQ0" aria-label="Würfelfläche Q0"></div>
-          <div class="cubeFace kipFaceQ1" aria-label="Würfelfläche Q1"></div>
-
-          <div class="slot k-4d read-east"  data-slot="W2_A"><div class="num"><span></span></div></div>
-          <div class="slot k-3d read-east"  data-slot="W2_B"><div class="num"><span></span></div></div>
-          <div class="slot k-2b read-north" data-slot="W2_C"><div class="num"><span></span></div></div>
-          <div class="slot k-2c read-north" data-slot="W2_D"><div class="num"><span></span></div></div>
-
-          <div class="slot k-3e read-west"  data-slot="W1_1"><div class="num"><span></span></div></div>
-          <div class="slot k-4e read-west"  data-slot="W1_2"><div class="num"><span></span></div></div>
-          <div class="slot k-2f read-north" data-slot="W1_3"><div class="num"><span></span></div></div>
-          <div class="slot k-2g read-north" data-slot="W1_4"><div class="num"><span></span></div></div>
+          <div class="slot s-3b read-west"  data-slot="S1"><div class="num"><span></span></div></div>
+          <div class="slot s-4b read-west"  data-slot="S2"><div class="num"><span></span></div></div>
+          <div class="slot s-2c read-north" data-slot="S3"><div class="num"><span></span></div></div>
+          <div class="slot s-2d read-north" data-slot="S4"><div class="num"><span></span></div></div>
         </div>
+
+        <div id="kipGroup" class="kipGroup hidden" aria-label="KIP Gruppe">
+          <div class="kipScale">
+            <div class="kipShadow" aria-hidden="true"></div>
+            <div class="kipEdgeCore" aria-hidden="true"></div>
+
+            <div class="cubeFace kipFaceQ0" aria-label="Würfelfläche Q0"></div>
+            <div class="cubeFace kipFaceQ1" aria-label="Würfelfläche Q1"></div>
+
+            <div class="slot k-4d read-east"  data-slot="W2_A"><div class="num"><span></span></div></div>
+            <div class="slot k-3d read-east"  data-slot="W2_B"><div class="num"><span></span></div></div>
+            <div class="slot k-2b read-north" data-slot="W2_C"><div class="num"><span></span></div></div>
+            <div class="slot k-2c read-north" data-slot="W2_D"><div class="num"><span></span></div></div>
+
+            <div class="slot k-3e read-west"  data-slot="W1_1"><div class="num"><span></span></div></div>
+            <div class="slot k-4e read-west"  data-slot="W1_2"><div class="num"><span></span></div></div>
+            <div class="slot k-2f read-north" data-slot="W1_3"><div class="num"><span></span></div></div>
+            <div class="slot k-2g read-north" data-slot="W1_4"><div class="num"><span></span></div></div>
+          </div>
+        </div>
+
+        <div class="ball" aria-label="Kugel"></div>
       </div>
 
-      <div class="ball" aria-label="Kugel"></div>
-    </div>
-
-    <!-- Kippspeed zwischen Box und Panel: schwarzer Streifen -->
-    <div class="kippspeedBlock" id="kippspeedBlock" aria-label="Kippspeed">
-      <div class="kippspeedLabel">KIPPSPEED</div>
-      <div class="sliderRow">
-        <img class="speedIcon" src="kippspeed_snail_tight.png" alt="langsam">
-        <input id="speedSlider" type="range" min="0" max="9" value="3" aria-label="Speed Slider">
-        <img class="speedIcon" src="kippspeed_hase_tight.png" alt="schnell">
+      <!-- Kippspeed als “Verbreiterung” des Boxrahmens -->
+      <div class="kippspeedBlock" id="kippspeedBlock" aria-label="Kippspeed">
+        <div class="kippspeedLabel">KIPPSPEED</div>
+        <div class="sliderRow">
+          <img class="speedIcon" src="kippspeed_snail_tight.png" alt="langsam">
+          <input id="speedSlider" type="range" min="0" max="9" value="3" aria-label="Speed Slider">
+          <img class="speedIcon" src="kippspeed_hase_tight.png" alt="schnell">
+        </div>
       </div>
     </div>
 
@@ -708,7 +721,6 @@
     const kipGroup  = document.getElementById("kipGroup");
     const btnStart  = document.getElementById("btnStart");
     const speedSlider = document.getElementById("speedSlider");
-    const kippspeedBlock = document.getElementById("kippspeedBlock");
 
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
@@ -920,14 +932,12 @@
       const nextFaceIndex = (faceIndex + 1) % 3;
       const next = sets[nextFaceIndex];
 
-      // rechts: aktuelle (die wegkippt)
       for(let i=0;i<4;i++){
         renderNumber(slotTargetsKipRight[i], curr[i], false);
         if(curr[i] != null) setDot(slotTargetsKipRight[i], curr[i]);
         else slotTargetsKipRight[i].classList.remove("dot");
       }
 
-      // links: nächste (taucht auf) -> ggf. leer, bis sie bestückt wird
       const nextPreview = mapHiddenToVisible_CW(next);
       for(let i=0;i<4;i++){
         renderNumber(slotTargetsKipLeft[i], nextPreview[i], false);
@@ -966,13 +976,11 @@
       setRotationSnap();
     }
 
-    // nur Indizes weiterdrehen (ohne Assign!)
     function advanceFullCW(){
       rotIndex  = (rotIndex + 1) % 4;
       faceIndex = (faceIndex + 1) % 3;
     }
 
-    // ===== SHOW: 7 Bilder, W-Flächen halb leer / halb bestückt =====
     let running = false;
 
     async function runShow7(){
@@ -985,55 +993,45 @@
 
       reroll12_keepEmpty();
 
-      // 1) W1 leer (halbe Zeit)
       showW();
       renderWEmpty();
       await sleep(halfFull);
 
-      // 2) W1 bestückt (halbe Zeit)
       ensureAssigned(0);
       renderW(true);
       await sleep(halfFull);
 
-      // 3) KIP W1 -> W2 (W2 bleibt leer!)
       showKip();
       renderKip();
       await sleep(holdMsKip);
 
-      // 4) W2 leer (halbe Zeit)
-      advanceFullCW(); // jetzt faceIndex=1
+      advanceFullCW();
       showW();
       renderWEmpty();
       await sleep(halfFull);
 
-      // 5) W2 bestückt (halbe Zeit)
       ensureAssigned(1);
       renderW(true);
       await sleep(halfFull);
 
-      // 6) KIP W2 -> W3 (W3 bleibt leer!)
       showKip();
       renderKip();
       await sleep(holdMsKip);
 
-      // 7) W3 leer (halbe Zeit)
-      advanceFullCW(); // faceIndex=2
+      advanceFullCW();
       showW();
       renderWEmpty();
       await sleep(halfFull);
 
-      // 8) W3 bestückt (halbe Zeit)
       ensureAssigned(2);
       renderW(true);
       await sleep(halfFull);
 
-      // 9) KIP W3 -> W1 (W1 ist schon bestückt, darf links sichtbar sein)
       showKip();
       renderKip();
       await sleep(holdMsKip);
 
-      // Ende: W1 wieder oben (bestückt)
-      advanceFullCW(); // faceIndex=0
+      advanceFullCW();
       showW();
       renderW(false);
 
@@ -1051,7 +1049,6 @@
 
       buildGridOnce();
 
-      // Streifen exakt setzen
       setKippspeedStripHeight();
       requestAnimationFrame(setKippspeedStripHeight);
       setTimeout(setKippspeedStripHeight, 80);
